Fixed back to top button being visible on mobile despite page not being scrollable

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -33,6 +33,8 @@ body, body * {
 }
 
 html {
+    // see footerComponent
+    height: 100vh;
     min-width: 320px;
 }
 
